modifying home.html //before adapting griding layout style

--- a/home.html
+++ b/home.html
@@ -3,16 +3,39 @@
 <head>
     <meta charset = "utf-8">
     <style>
+        body {
+            margin: 0;
+        }
+
         #main_title {
             text-align: center;
             font-size: 50px;
             border-bottom: 2px solid black;
             margin: 0px;
-            padding: 25px;
+            padding: 30px;
+        }
+
+        #side_contents {
+            list-style: none;
+            border-right: 2px solid black;
+            width: 200px;
+            margin: 0px;
         }
     </style>
 </head>
 <body>
     <h1 id = "main_title">그림사랑</h1>
+    <div id = "side_menu">
+        <ul id = "side_contents">
+            <li>Introduction</li>
+            <li>Members</li>
+            <li>Gallery</li>
+            <li>Photo</li>
+            <li>Event</li>
+        </ul>
+    </div>
+    <div>
+        <p>This is prototype Paragraph.</p>
+    </div>
 </body>
 </html>
